@@ -2,7 +2,8 @@ Version Next
 
     - Use fallocate(FALLOC_FL_PUNCH_HOLE) for empty disk cache blocks (issue #200)
     - Made sync(1) work on s3backer file to flush cached data (issue #197)
-    - Fix bug where s3b_compress=deflate NDB flag would fail (issue #195)
+    - Fixed bug where s3b_compress=deflate NDB flag would fail (issue #195)
+    - Fixed bug in zero cache "current_cache_size" stats value (issue #204)
     - Reuse cURL handles after normal HTTP error codes (issue #199)
     - Run modprobe(8) if needed when starting with the --nbd flag (issue #203)
 
